catkin_ws/logs/px4_offboard/build.make.037.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:54:9: error: ‘yas_start’ was not declared in this scope
         yas_start = pos_read.yaw; //note down the yaw when starting   
         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:58:9: error: ‘g’ was not declared in this scope
         g.command = 3.14;
         ^
make[2]: *** [CMakeFiles/apriltag.dir/src/apriltag.cpp.o] Error 1
make[1]: *** [CMakeFiles/apriltag.dir/all] Error 2
make: *** [all] Error 2
